# no-more-imports

./: README.md  pyproject.toml
src/lazy_import/: __init__.py  ast.py  importer.py
src/no_more_imports/: __init__.py  ast.py  const.py  importer.py
tests/: conftest.py  test_ast.py  test_lazy_import.py
tests/data/: input_file.py
