[project]
name = "no-more-imports"
version = "0.1.1"
description = "python with no imports"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "EUPL-1.2"}

[project.urls]
repository = "https://git.jon-e.net/jonny/no-more-imports"
homepage = "https://git.jon-e.net/jonny/no-more-imports"
issues = "https://git.jon-e.net/jonny/no-more-imports"
documentation = "https://git.jon-e.net/jonny/no-more-imports/src/branch/main/README.md"

[project.optional-dependencies]
tests = [
    "pytest>=8.3.3",
]
dev = [
    "black>=24.10.0",
    "ruff>=0.6.9",
]

[tool.ruff]
target-version = "py310"
include = ["src/**/*.py"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
fixable = ["ALL"]

[tool.black]
target-version = ['py310', 'py311', 'py312']
enable-unstable-feature = ["string_processing"]
preview = true
line-length = 100

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
